...
            static func sidebarItem(_ rawValue: String) -> String {
                "navigation.sidebar.\(rawValue)"
            }
        }

        struct CreateMenu {
            static let button = "spreads.tabbar.create.menu"
            static let createSpread = "spreads.tabbar.create.menu.spread"
            static let createTask = "spreads.tabbar.create.menu.task"
            static let createNote = "spreads.tabbar.create.menu.note"
        }

        struct SpreadPicker {
            static let chooseCustomDate = "tasks.spreadpicker.customdate"
...
